// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render with active styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-0 {
  width: 24px;
  height: 24px;
  border-radius: 100%;
  border: 2px solid #FFFFFF;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
}

<div
  aria-busy="true"
  aria-live="assertive"
  class="circuit-0 circuit-1"
  role="alert"
/>
`;

exports[`Spinner should render with dark styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-0 {
  width: 24px;
  height: 24px;
  border-radius: 100%;
  border: 2px solid #FFFFFF;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
  border-color: #212933;
  border-top-color: transparent;
}

<div
  aria-busy="true"
  aria-live="assertive"
  class="circuit-0 circuit-1"
  role="alert"
/>
`;

exports[`Spinner should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-0 {
  width: 24px;
  height: 24px;
  border-radius: 100%;
  border: 2px solid #FFFFFF;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
}

<div
  aria-busy="true"
  aria-live="assertive"
  class="circuit-0 circuit-1"
  role="alert"
/>
`;
